home-manager/configs/waybar/style.css
/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Global
 * ─────────────────────────────────────────────────────────────────────────────
 */

* {
    font-family: Commit Mono Nerd Font;
    font-size: 14px;
    font-weight: bold;
    border: none;
    border-radius: 0;
    padding: 0;
    margin: 0;
    box-shadow: none;
    text-shadow: none;
}

window#waybar {
    color: #ffffff;
    background-color: #1e1e2e;
}

#g-workspaces,
#g-monitoring,
#g-apps,
#g-various,
#g-datetime,
#g-system,
#g-bluetooth,
#g-network,
#g-media {
    color: #1e1e2e;
    margin: 6px 2px;
    border-radius: 8px;
}

/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Workspaces
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-workspaces {
    background-color: #1e1e2e;
}

/* Default and non-empty buttons */
#workspaces button {
    color: #51576d;
    background-color: transparent;
    margin: 0 2px;
}

#workspaces button label {
    font-size: 20px;
    margin: 0 4px;
}

/* Empty buttons */
#workspaces button.empty {
    color: #313244;
    background-color: transparent;
}

/* Hover */
#workspaces button:hover {
    color: #f8f8f8;
    background: transparent;
}

/* Current */
#workspaces button.active {
    color: #ca9ee6;
    background-color: transparent;
}

/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Monitoring
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-monitoring {
    background-color: #ea999c;
}

#disk,
#temperature,
#cpu,
#memory {
    padding: 0 8px;
    border-radius: 8px;
}

#disk:hover,
#temperature:hover,
#cpu:hover,
#memory:hover {
    color: #f8f8f8;
    background-color: #333333;
}

/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Applications
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-apps {
    background-color: #51576d;
}


#tray {
    padding: 0 8px;
}

/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Various
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-various {
    background-color: #1e1e2e;
}

#custom-swaync,
#custom-trash {
    background-color: #cba6f7;
    padding: 0 8px;
    margin: 0 2px 0 2px;
    border-radius: 8px;
    min-width: 20px;
}

#custom-swaync.notification {
    color: #f8f8f8;
    background-color: #333333;
    border: 2px solid #f8f8f8;
}

#custom-swaync:hover,
#custom-trash:hover {
    color: #f8f8f8;
    background-color: #333333;
}


/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Datetime
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-datetime {
    background-color: #1e1e2e;
}

#clock.date,
#clock.time {
    background-color: #f8f8f8;
    padding: 0 8px;
    margin: 0 2px 0 2px;
    border-radius: 8px;
    min-width: 20px;
}

#clock.date:hover,
#clock.time:hover,
#clock.date:active,
#clock.time:active {
    color: #f8f8f8;
    background-color: #333333;
}

/*
 * ─────────────────────────────────────────────────────────────────────────────
 * System: battery, backlight, displays, etc
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-system {
    background-color: #ef9f76;
}

#language,
#idle_inhibitor,
#battery,
#backlight,
#custom-displays {
    padding: 0 8px;
    border-radius: 8px;
}

#language:hover,
#idle_inhibitor:hover,
#battery:hover,
#backlight:hover,
#custom-displays:hover {
    color: #f8f8f8;
    background-color: #333333;
}

#battery.warning {
    color: #e7c664;
    background-color: #1e1e2e;
    margin: 2px;
    border-radius: 8px;
}

#battery.critical {
    color: #f38ba8;
    background-color: #1e1e2e;
    margin: 2px;
    border-radius: 8px;
}

/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Bluetooth
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-bluetooth {
    background-color: #89b4fa;
}

#bluetooth {
    padding: 0 8px;
    border: 2px solid #89b4fa;
    border-radius: 8px;
}

#bluetooth.off {
    color: #cccccc;
    background-color: #333333;
}

#bluetooth:hover {
    color: #f8f8f8;
    background-color: #333333;
}

/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Network
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-network {
    background-color: #a6e3a1;
}

#network {
    padding: 0 12px 0 8px;
    border-radius: 8px;
}

#network.disconnected {
    color: #f8f8f8;
    background-color: #333333;
    border: 2px solid #a6e3a1;
}

#network:hover {
    color: #f8f8f8;
    background-color: #333333;
}

/*
 * ─────────────────────────────────────────────────────────────────────────────
 * Multimedia
 * ─────────────────────────────────────────────────────────────────────────────
 */

#g-media {
    background-color: #e7c664;
}

#pulseaudio,
#pulseaudio.microphone,
#mpris {
    padding: 0 8px;
    border-radius: 8px;
}

#pulseaudio.source-muted.microphone {
    color: #333333;
}

#pulseaudio.muted:not(.microphone) {
    color: #333333;
}

#mpris.paused {
    color: #f8f8f8;
    background-color: #333333;
    border: 2px solid #e7c664;
}

#pulseaudio:hover,
#pulseaudio.microphone:hover,
#mpris:hover {
    color: #f8f8f8;
    background-color: #333333;
}

